[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "P-GRe"
version = "1.0.0"
description = "An efficient pipeline for pseudogenes annotation"
readme = "README.md"
license = { text = "Artistic-2.0" }
authors = [
    { name = "Sébastien Cabanac", email = "sebastien.cabanac@univ-tlse3.fr" },
    { name = "Christophe Dunand", email = "christophe.dunand@univ-tlse3.fr" },
    { name = "Catherine Mathé", email = "catherine.mathe-dehais@univ-tlse3.fr" },
]
requires-python = ">=3.8"

[project.scripts]
pgre = "P-GRe.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["P-GRe*"]
